objects/zkusps__MailPiece__c.object
<CustomObject>
    <fields>
        <fullName>zkusps__allowRecordDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Record Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__height__c</fullName>
        <label>Height</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__length__c</fullName>
        <label>Length</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__nonMachinable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non-Machinable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkusps__shape__c</fullName>
        <label>Shape</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkusps__shipment__c</fullName>
        <label>USPS Shipment</label>
        <referenceTo>zkusps__Shipment__c</referenceTo>
        <relationshipName>Mail_Pieces</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zkusps__valueOfContents__c</fullName>
        <label>Value of Contents (USD)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkusps__weightOunces__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight Ounces</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__weightPounds__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Weight Pounds</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__width__c</fullName>
        <label>Width</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkusps__zkModKey__c</fullName>
        <label>ZK Mod Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>USPS Mail Piece</label>
    <nameField>
        <displayFormat>Mail-Piece-{00000000}</displayFormat>
        <label>Mail Piece Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mail Pieces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>